--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
 <div class="footer">
 
-<p>&copy; 2014 by XYZ & Siddharth</p>
+<p>&copy; 2014 by XYZ </p>
 
 <!--==============================Footer Ends==============================-->
 </div>
